features and readme add